fix: userRoles 직렬화 문제 해결