@@ -13,6 +13,7 @@ import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Set;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 @Entity
 @Getter
@@ -83,6 +84,6 @@ public class User {
     public List<String> mapUserRolesToList() {
         return this.getRoles().stream()
                 .map(UserRoles::name)
-                .toList();
+                .collect(Collectors.toList());
     }
 }
